--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 		<!-- GAME INSTRUCTIONS SECTION -->
 		<div class="card">
-		  <div class="card-body text-center">
+		  <div class="card-body text-center" id="form-div">
 		    <form>
 		    	<label for="name-input"></label>
 		    	<input type="text" id="name-input" placeholder="Enter your name...">
@@ -53,7 +53,7 @@
 				  <div class="card-header">
 				    Results
 				  </div>
-				  <div class="card-body" id="results-div"></div>
+				  <div class="card-body text-center" id="results-div"></div>
 				</div>
 			</div>
 			<div class="col-md-4">
