--- a/index.html
+++ b/index.html
@@ -17,6 +17,86 @@
 	<script src="./logic.js" type="text/javascript"></script>
 </head>
 <body>
+
+	<div class="container">
+
+		<!-- JUMBOTRON -->
+		<div class="jumbotron text-center">
+		  <h1 class="display-4"><strong>Anytime is Train Time</strong></h1>
+		  <p class="lead">Choo Choo. Chee Chee</p>
+		</div>
+
+		<!-- LIST OF TRAIN SECTIONS -->
+		<div class="card">
+		  <div class="card-header">
+		    Current Train Schedule
+		  </div>
+		  <div class="card-body">
+		  	<table class="table">
+				  <thead>
+				    <tr>
+				      <th scope="col">Train Name</th>
+				      <th scope="col">Destination</th>
+				      <th scope="col">Frequency(mins)</th>
+				      <th scope="col">Next Arrival</th>
+				      <th scope="col">Minutes Away</th>
+				    </tr>
+				  </thead>
+				  <tbody id="table-body">
+				    <!-- <tr>
+				      <th scope="row">1</th>
+				      <td>Mark</td>
+				      <td>Otto</td>
+				      <td>@mdo</td>
+				    </tr>
+				    <tr>
+				      <th scope="row">2</th>
+				      <td>Jacob</td>
+				      <td>Thornton</td>
+				      <td>@fat</td>
+				    </tr>
+				    <tr>
+				      <th scope="row">3</th>
+				      <td>Larry</td>
+				      <td>the Bird</td>
+				      <td>@twitter</td>
+				    </tr> -->
+				  </tbody>
+				</table>
+		  </div>
+		</div>
+		<br>
+
+
+		<!-- ADD TRAIN SECTION -->
+		<div class="card">
+		  <div class="card-header">
+		    Add Train
+		  </div>
+		  <div class="card-body">
+		    <form>
+				  <div class="form-group">
+				    <label for="name-input">Train Name</label>
+				    <input type="text" class="form-control" id="name-input">
+				  </div>
+				  <div class="form-group">
+				    <label for="destination-input">Destination</label>
+				    <input type="text" class="form-control" id="destination-input">
+				  </div>
+				  <div class="form-group">
+				    <label for="first-time-input">First Time(HH:mm - military time)</label>
+				    <input type="text" class="form-control" id="first-time-input">
+				  </div>
+				  <div class="form-group">
+				    <label for="frequency-input">Frequency(min)</label>
+				    <input type="number" class="form-control" id="frequency-input" min="0">
+				  </div>
+				  <button id="submit-btn" type="submit" class="btn btn-primary">Submit</button>
+				</form>
+		  </div>
+		</div>
+
+	</div>
 	
 </body>
 </html>
