--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	<!-- FIREBASE -->
 	<script src="https://www.gstatic.com/firebasejs/5.1.0/firebase.js"></script>
 
+	<!-- MOMENT.JS -->
+	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+
 	<!-- CUSTOM JS -->
 	<script src="./logic.js" type="text/javascript"></script>
 </head>
