Calculated next arrival time and minutes away fields

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		  </div>
 		  <div class="card-body">
 		  	<table class="table">
-				  <thead>
+				  <thead class="text-center">
 				    <tr>
 				      <th scope="col">Train Name</th>
 				      <th scope="col">Destination</th>
@@ -45,7 +45,7 @@
 				      <th scope="col">Minutes Away</th>
 				    </tr>
 				  </thead>
-				  <tbody id="table-body">
+				  <tbody id="table-body" class="text-center">
 				    <!-- <tr>
 				      <th scope="row">1</th>
 				      <td>Mark</td>
