Added an edit form that allows a train's details to be updated, except name

--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
 				    <input type="text" class="form-control" id="name-edit">
 				  </div>
 				  <div class="form-group">
-				    <label for="destination-edit">Destination</label>
+				    <label for="destination-edit">New Destination</label>
 				    <input type="text" class="form-control" id="destination-edit">
 				  </div>
 				  <div class="form-group">
-				    <label for="first-time-edit">First Time(HH:mm - military time)</label>
+				    <label for="first-time-edit">New First Time(HH:mm - military time)</label>
 				    <input type="text" class="form-control" id="first-time-edit">
 				  </div>
 				  <div class="form-group">
-				    <label for="frequency-edit">Frequency(min)</label>
+				    <label for="frequency-edit">New Frequency(min)</label>
 				    <input type="number" class="form-control" id="frequency-edit" min="0">
 				  </div>
 				  <button id="edit-btn" type="submit" class="btn btn-primary">Submit</button>
