--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 				      <th scope="col">Frequency(mins)</th>
 				      <th scope="col">Next Arrival</th>
 				      <th scope="col">Minutes Away</th>
+				      <th scope="col"></th>
 				    </tr>
 				  </thead>
 				  <tbody id="table-body" class="text-center"></tbody>
